5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4081/executions/1643_1054.log
== TEST (2019-04-08 14:18:25) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x=float(input(""))
y=float(input(""))
if (2*x+y=3):
	
-- ERROR:
File "XXXX", line 6
    if (2*x+y=3):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:18:36) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x=float(input(""))
y=float(input(""))
if (2x+y=3):
	
-- ERROR:
File "XXXX", line 6
    if (2x+y=3):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:19:39) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x=float(input(""))
y=float(input(""))
if (2x+y=3):
	print("ponto pertence a reta")
else:
	print("ponto nao pertence a reta")
-- ERROR:
File "XXXX", line 6
    if (2x+y=3):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:44:43) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x=float(input(""))
y=float(input(""))
reta= 2*x+y=3
if : (x,y!=reta)
	print("ponto pertence a reta")
else:
	print("ponto nao pertence a reta")
-- ERROR:
File "XXXX", line 7
    if : (x,y!=reta)
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:44:58) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x=float(input(""))
y=float(input(""))
reta= 2*x+y=3
if (x,y!=reta):
	print("ponto pertence a reta")
else:
	print("ponto nao pertence a reta")
-- ERROR:
File "XXXX", line 6
    reta= 2*x+y=3
         ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:46:36) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x=float(input(""))
y=float(input(""))
reta= 2*x+y=3
if (x,y<reta):
	print("ponto pertence a reta")
else:
	print("ponto nao pertence a reta")
-- ERROR:
File "XXXX", line 6
    reta= 2*x+y=3
         ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:47:03) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x=float(input(""))
y=float(input(""))
reta= 2x+y=3
if (x,y<reta):
	print("ponto pertence a reta")
else:
	print("ponto nao pertence a reta")
-- ERROR:
File "XXXX", line 6
    reta= 2x+y=3
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:48:08) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x=float(input(""))
y=float(input(""))
reta= 2x+y=3
if (reta>x,y):
	print("ponto pertence a reta")
else:
	print("ponto nao pertence a reta")
-- ERROR:
File "XXXX", line 6
    reta= 2x+y=3
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:48:16) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x=float(input(""))
y=float(input(""))
reta= 2*x+y=3
if (reta>x,y):
	print("ponto pertence a reta")
else:
	print("ponto nao pertence a reta")
-- ERROR:
File "XXXX", line 6
    reta= 2*x+y=3
         ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:49:10) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x=float(input(""))
y=float(input(""))
reta(2*x+y=3)
if (reta>x,y):
	print("ponto pertence a reta")
else:
	print("ponto nao pertence a reta")
-- ERROR:
File "XXXX", line 6
    reta(2*x+y=3)
        ^
SyntaxError: keyword can't be an expression
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:50:10) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x=float(input(""))
y=float(input(""))
reta(2*x+y=3)
if (reta>x,y):
	print("ponto pertence a reta")
else:
	print("ponto nao pertence a reta")
-- ERROR:
File "XXXX", line 6
    reta(2*x+y=3)
        ^
SyntaxError: keyword can't be an expression
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 16:05:00) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x=float(input(""))
y=float(input(""))
reta(2*x+y=3)
if (reta>x,y):
	pertence("ponto pertence a reta")
else:
	pertence("ponto nao pertence a reta")
print("pertence")	
-- ERROR:
File "XXXX", line 6
    reta(2*x+y=3)
        ^
SyntaxError: keyword can't be an expression
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:48:26) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x=float(input(""))
y=float(input(""))
reta(2*x+y=3)
if (reta>x,y):
	pertence("ponto pertence a reta")
else:
	pertence("ponto nao pertence a reta")
print("pertence")	
-- ERROR:
File "XXXX", line 6
    reta(2*x+y=3)
        ^
SyntaxError: keyword can't be an expression
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:48:57) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x=float(input(""))
y=float(input(""))
reta=2*y=3
if (reta>x,y):
	pertence("ponto pertence a reta")
else:
	pertence("ponto nao pertence a reta")
print("pertence")	
-- ERROR:
File "XXXX", line 6
    reta=2*y=3
        ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:50:13) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x=float(input(""))
y=float(input(""))
if (soma= 2x+y=3):
	pertence("ponto pertence a reta")
else:
	pertence("ponto nao pertence a reta")
print("pertence")	
-- ERROR:
File "XXXX", line 6
    if (soma= 2x+y=3):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:50:27) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x=float(input(""))
y=float(input(""))
if (soma= 2*x+y=3):
	pertence("ponto pertence a reta")
else:
	pertence("ponto nao pertence a reta")
print("pertence")	
-- ERROR:
File "XXXX", line 6
    if (soma= 2*x+y=3):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:50:51) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x=float(input(""))
y=float(input(""))
if (soma= 2x+y=3):
	pertence("ponto pertence a reta")
else:
	pertence("ponto nao pertence a reta")
print("pertence")	
-- ERROR:
File "XXXX", line 6
    if (soma= 2x+y=3):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:51:58) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x=float(input(""))
y=float(input(""))
somatotal (2*x+y=3)
if (somatotal= 2*x+y=3):
	pertence("ponto pertence a reta")
else:
	pertence("ponto nao pertence a reta")
print("pertence")	
-- ERROR:
File "XXXX", line 7
    if (somatotal= 2*x+y=3):
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:52:23) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x=float(input(""))
y=float(input(""))
somatotal (2*x+y=3)
if (somatotal== 2*x+y=3):
	pertence("ponto pertence a reta")
else:
	pertence("ponto nao pertence a reta")
print("pertence")	
-- ERROR:
File "XXXX", line 7
    if (somatotal== 2*x+y=3):
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:52:39) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x=float(input(""))
y=float(input(""))
somatotal (2*x+y=3)
if  (2*x+y=3):
	pertence("ponto pertence a reta")
else:
	pertence("ponto nao pertence a reta")
print("pertence")	
-- ERROR:
File "XXXX", line 7
    if  (2*x+y=3):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:54:56) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x=float(input(""))
y=float(input(""))
somatotal (2*x+y=3)
if  (somatotal == 2*x+y=3):
	pertence("ponto pertence a reta")
else:
	pertence("ponto nao pertence a reta")
print("pertence")	
-- ERROR:
File "XXXX", line 7
    if  (somatotal == 2*x+y=3):
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:55:00) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x=float(input(""))
y=float(input(""))
somatotal=(2*x+y=3)
if  (somatotal == 2*x+y=3):
	pertence("ponto pertence a reta")
else:
	pertence("ponto nao pertence a reta")
print("pertence")	
-- ERROR:
File "XXXX", line 6
    somatotal=(2*x+y=3)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:55:30) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x=float(input(""))
y=float(input(""))
somatotal(2*x+y=3)
if  (somatotal == 2*x+y=3):
	print("ponto pertence a reta")
else:
	print("ponto nao pertence a reta")	
-- ERROR:
File "XXXX", line 7
    if  (somatotal == 2*x+y=3):
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:55:59) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x=float(input(""))
y=float(input(""))
somatotal=2*x+y 
if  somatotal == 2*x+y=3:
	print("ponto pertence a reta")
else:
	print("ponto nao pertence a reta")	
-- ERROR:
File "XXXX", line 7
    if  somatotal == 2*x+y=3:
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 18:56:06) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x=float(input(""))
y=float(input(""))
somatotal=2*x+y 
if  somatotal == 2*x+y 3:
	print("ponto pertence a reta")
else:
	print("ponto nao pertence a reta")	
-- EXECUTION TIME:
0.119669
-- ERROR:
  File "/home/codebench/codes/1643/1054/main.py", line 7
    if  somatotal == 2*x+y 3:
                           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:56:07) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x=float(input(""))
y=float(input(""))
somatotal=2*x+y 
if  somatotal == 2*x+y 3:
	print("ponto pertence a reta")
else:
	print("ponto nao pertence a reta")	
-- ERROR:
File "XXXX", line 7
    if  somatotal == 2*x+y 3:
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:56:28) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x=float(input(""))
y=float(input(""))
somatotal=2*x+y 
if  (somatotal == 3):
	print("ponto pertence a reta")
else:
	print("ponto nao pertence a reta")	
-- OUTPUT:
ponto pertence a reta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 18:56:31) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x=float(input(""))
y=float(input(""))
somatotal=2*x+y 
if  (somatotal == 3):
	print("ponto pertence a reta")
else:
	print("ponto nao pertence a reta")	
-- EXECUTION TIME:
0.20344
-- TEST CASE 1:
---- input:
20
-37
---- correct output:
ponto pertence a reta
---- user output:
ponto pertence a reta
-- TEST CASE 2:
---- input:
5
13
---- correct output:
ponto nao pertence a reta
---- user output:
ponto nao pertence a reta
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
